--- a/core_tests/LUCA_UI_Tests.html
+++ b/core_tests/LUCA_UI_Tests.html
@@ -4,13 +4,9 @@
     <title>LUCA_UI_Tests</title>
   </head>
   <body>
-    <div id="LucaUIHost">
-		<div style="width:250px;text-align:center;padding:5px;border:solid 1px black;background:whitesmoke;font-family:arial">
-			<h3>LUCA UI Framework (alpha)</h3>
-			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="LUCA UI Framework Logo"></img>
-			<p>Loading...</p>
-		</div>    
-    </div>
-    <script type="text/javascript" src="LUCA_UI_Tests.dart.app.js"></script>
+  	<h1>Buckshot Unit Tests</h1>
+	<div id="status">Running...</div>
+	<div id="LucaUIHost"></div>
+    <script type="text/javascript" src="LUCA_UI_Tests.dart.js"></script>
   </body>
 </html>
