reorged some test files

--- a/core_tests/tests.html
+++ b/core_tests/tests.html
@@ -7,6 +7,6 @@
   	<h1>Buckshot Unit Tests</h1>
 	<div id="status">Running...</div>
 	<div id="LucaUIHost"></div>
-    <script type="text/javascript" src="LUCA_UI_Tests.dart.js"></script>
+    <script type="text/javascript" src="tests.dart.js"></script>
   </body>
 </html>
