more progress on mutation events. still more work to be done.

--- a/demos/ValueConversion/ValueConversion.html
+++ b/demos/ValueConversion/ValueConversion.html
@@ -4,9 +4,9 @@
     <title>ValueConversion</title>
   </head>
   <body style="margin:0;padding:0">
-    <div id="LucaUIHost">
+    <div id="BuckshotHost">
  		<div style="width:250px;text-align:center;padding:5px;border:solid 1px black;background:whitesmoke;font-family:arial">
-			<h3>LUCA UI Framework (alpha)</h3>
+			<h3>Buckshot Framework (alpha)</h3>
 			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="LUCA UI Framework Logo"></img>
 			<p>Loading...</p>
 		</div>   
