--- a/tests/tests.html
+++ b/tests/tests.html
@@ -6,7 +6,7 @@
   <body>
   	<h1>Buckshot Unit Tests</h1>
 	<div id="status">Running...</div>
-	<div id="LucaUIHost"></div>
+	<div id="BuckshotHost"></div>
     <script type="text/javascript" src="tests.dart.js"></script>
   </body>
 </html>
