--- a/demos/Colors/Colors.html
+++ b/demos/Colors/Colors.html
@@ -11,7 +11,7 @@
 			<p>Loading...</p>
 		</div>   
     </div>
-    <script type="text/javascript" src="Colors.dart.app.js"></script>
+    <script type="text/javascript" src="Colors.dart.js"></script>
 <script type="text/javascript">
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-25453306-1']);
