--- a/demos/Life/GameOfLife.html
+++ b/demos/Life/GameOfLife.html
@@ -11,7 +11,7 @@
 			<p>Loading...</p>
 		</div>
 	</div>
-    <script type="text/javascript" src="GameOfLife.dart.app.js"></script>
+    <script type="text/javascript" src="GameOfLife.dart.js"></script>
 <script type="text/javascript">
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-25453306-1']);
