initial version of control templates now working

--- a/demos/tryit/Tryit.html
+++ b/demos/tryit/Tryit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Try LUCA UI</title>
+    <title>Try Buckshot</title>
   </head>
   <body>
 	<div id="BuckshotHost">
