more refinement of animation system.  added primitive shape elements

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LUCA_UI_Tests</title>
+    <title>Buckshot Tests</title>
   </head>
   <body>
   	<h1>Buckshot Unit Tests</h1>
