updated readme, added .gitignore, updated some comments

--- a/demos/tryit/Tryit.html
+++ b/demos/tryit/Tryit.html
@@ -88,7 +88,7 @@ This is the actual xml that is rendering the page.
        </hyperlink>
     </border>
     <border style="{resource sidebox}">
-       <hyperlink targetName="_blank" navigateto="http://www.lucastudios.com/trylucaui/docs/">
+       <hyperlink targetName="_blank" navigateto="http://www.lucastudios.com/trybuckshot/docs/">
           <textblock style="{resource sideboxtext}">Library Documentation</textblock>
        </hyperlink>
     </border>
