--- a/debug/debug.html
+++ b/debug/debug.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>LUCA_UI_Demo</title>   
+    <title>Buckshot Debug</title>   
   </head>
   <body style="margin:0;padding:0">
     <div id="BuckshotHost">
 		<div style="width:250;text-align:center;padding:5px;border:solid 1px black;background:whitesmoke;font-family:arial">
 			<h3>Buckshot Framework (alpha)</h3>
-			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="LUCA UI Framework Logo"></img>
+			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="Buckshot Framework Logo"></img>
 			<p>Loading...</p>
 		</div>    
     </div>
