--- a/demos/todo/todo.html
+++ b/demos/todo/todo.html
@@ -9,7 +9,7 @@
 	
 			<h3>Buckshot Framework (alpha)</h3>
 		
-			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="LUCA UI Framework Logo"></img>
+			<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="Buckshot Framework Logo"></img>
 		
 			<p>Loading...</p>
 	
