--- a/demos/ValueConversion/ValueConversion.html
+++ b/demos/ValueConversion/ValueConversion.html
@@ -11,7 +11,8 @@
 			<p>Loading...</p>
 		</div>   
     </div>
-    <script type="text/javascript" src="ValueConversion.dart.app.js"></script>
+    <script type="application/dart" src="ValueConversion.dart"></script>
+    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 <script type="text/javascript">
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-25453306-1']);
