fixed some type-check issues.  updated test html to use dartium vm instead of js.

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -7,6 +7,7 @@
   	<h1>Buckshot Unit Tests</h1>
 	<div id="status">Running...</div>
 	<div id="BuckshotHost"></div>
-    <script type="text/javascript" src="tests.dart.js"></script>
+    <script type="application/dart" src="tests.dart"></script>
+    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
 </html>
