changed parser to dart xml.

--- a/demos/tryit/Tryit.html
+++ b/demos/tryit/Tryit.html
@@ -65,7 +65,7 @@ This is the actual xml that is rendering the page.
       <stackpanel>
           <textblock foreground="White" fontSize="48" text="Buckshot"></textblock>
           <textblock fontfamily="arial" foreground="White" text="A Better Way To Web"></textblock>
-          <stackpanel orientation=horizontal margin="5,0,0,0">
+          <stackpanel orientation="horizontal" margin="5,0,0,0">
           		<textblock fontSize='10' fontfamily="arial" foreground="White" text="Version:"></textblock>
   	            <textblock margin='0,0,0,5' fontSize='10' fontfamily="arial" foreground="White" text="{data version}"></textblock>
           </stackpanel>
