--- a/debug/debug.html
+++ b/debug/debug.html
@@ -10,6 +10,7 @@
 			<p>Loading...</p>
 		</div>    
     </div>
-    <script type="text/javascript" src="debug.dart.app.js"></script>
+    <script type="application/dart" src="debug.dart"></script>
+    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
 </html>
