adding files, still very broken

--- a/demos/editor/editor.html
+++ b/demos/editor/editor.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>editor</title>
+    <link rel="stylesheet" type="text/css" href="codemirror.css" />
   </head>
   <body>
     <div id="BuckshotHost">
