moved media and social controls inside the controls/ directory.  unit tests.

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,9 +3,7 @@
   <head>
     <title>Buckshot Tests</title>
   </head>
-  <body>
-  	<h1>Buckshot Unit Tests</h1>
-	<div id="status">Running...</div>
+  <body style='margin:0px;padding:0px'>
 	<div id="BuckshotHost"></div>
 	
 	<!-- Buckshot Templates -->
