more work on Polly and Brutus

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -92,11 +92,9 @@
 		  <border margin='1' width='300' height='300' background='Orange'>
 		    <border name='bLorumIpsum' margin='10' padding='10' background='Black' halign='stretch' valign='stretch'>
 		      <textblock name='lblLorumIpsum' halign='stretch' valign='center' foreground='White'>
-		      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nunc nunc, lacinia sit amet
-		      ultricies non, bibendum quis eros. Integer hendrerit volutpat velit sit amet iaculis. Curabitur
-		      eu arcu velit, non blandit nulla. Nullam diam dui, molestie non ultricies a, tristique nec nunc.
-		      Nullam hendrerit fringilla nulla non porttitor. Cras orci sapien, porttitor placerat dapibus vitae,
-		      pharetra a lectus. Nulla tincidunt lacinia elit ac tempus. Sed sed sem justo, a b c d e f g h i j k l m n o p q r s t u v w x y z</textblock>
+              This box should be stretched horizontally and 
+		      vertically within the Orange Border. The text should be centered vertically inside the padded black Border.
+		       a b c d e f g h i j k l m n o p q r s t u v w x y z</textblock>
 		    </border>
 		  </border>
 		
