--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Buckshot Tests</title>
   </head>
   <body style='margin:0px;padding:0px'>
