Polly is handling cross-browser vertical & horizontal StackPanel alignment, and cross-axis alignments for vertical StackPanel.  cross-axis for horizontal SP next...

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -78,7 +78,7 @@
 		
 		  <textblock name='lblHCenter' halign='center'>center center</textblock>
 		  <textblock name='lblRight' halign='right'>right right right</textblock>
-		  <textblock name='lblLong'>long long long long long long long long</textblock>
+		  <textblock name='lblLong'>long long long long long long long long long</textblock>
 		  <border name='bCircle' halign='center' borderthickness='5' bordercolor='Purple' width='150' height='150' background='Yellow' cornerradius='150'></border>
 		  <stackpanel name='spVerticalAlignment' height='300' halign='stretch' background='Gray' orientation='horizontal'>
 		    <textblock name='lblTop' valign='top'>top top top</textblock>
