renamed dropdownlistitem to dropdownlist per issue #22.  Updated demos to reflect new naming.

--- a/demos/Calculator/Calculator.html
+++ b/demos/Calculator/Calculator.html
@@ -50,9 +50,9 @@
             - dropdownlist
             - - name: ddlMode
               - - items
-                - - - dropdownlistitem
+                - - - dropdownitem
                     - - {name: Standard, value: Standard}
-                    - dropdownlistitem
+                    - dropdownitem
                     - - {name: Extended, value: Extended}
         - border
         - - {grid.row: 1, style: '{resource borderOutput}'}
@@ -94,8 +94,8 @@
 					<textblock style='{resource defaultText}' text='Mode:' margin='0,0,0,5' />
 					<dropdownlist name='ddlMode'>
 						<items>
-							<dropdownlistitem name='Standard' value='Standard' />
-							<dropdownlistitem name='Extended' value='Extended' />
+							<dropdownitem name='Standard' value='Standard' />
+							<dropdownitem name='Extended' value='Extended' />
 						</items>
 					</dropdownlist>
 				</stackpanel>
