--- a/demos/tryit/Tryit.html
+++ b/demos/tryit/Tryit.html
@@ -115,13 +115,13 @@ This is the actual xml that is rendering the page.
       <textblock margin="0,10,0,0" text="Elements:" fontfamily="arial"></textblock>
       <dropdownlist name="ddlElements">
         <items>
-          <dropdownlistitem name='' value=''></dropdownlistitem>
-          <dropdownlistitem name='Hello World' value='helloworld'></dropdownlistitem>
-          <dropdownlistitem name='StackPanel' value='stackpanel'></dropdownlistitem>
-          <dropdownlistitem name='Border' value='border'></dropdownlistitem>
-          <dropdownlistitem name='Grid' value='grid'></dropdownlistitem>
-          <dropdownlistitem name='Layout Canvas' value='layoutcanvas'></dropdownlistitem>
-          <dropdownlistitem name='This Page!' value='thispage'></dropdownlistitem>
+          <dropdownitem name='' value='' />
+          <dropdownitem name='Hello World' value='helloworld' />
+          <dropdownitem name='StackPanel' value='stackpanel' />
+          <dropdownitem name='Border' value='border' />
+          <dropdownitem name='Grid' value='grid' />
+          <dropdownitem name='Layout Canvas' value='layoutcanvas' />
+          <dropdownitem name='This Page!' value='thispage' />
         </items>
       </dropdownlist>
     </stackpanel>
@@ -129,15 +129,15 @@ This is the actual xml that is rendering the page.
       <textblock margin="0,10,0,0" text="Controls:" fontfamily="arial"></textblock>
       <dropdownlist name="ddlControls">
         <items>
-          <dropdownlistitem name='' value=''></dropdownlistitem>
-          <dropdownlistitem name='ListBox' value='listbox'></dropdownlistitem>
-          <dropdownlistitem name='DropDownList' value='dropdownlist'></dropdownlistitem>
-          <dropdownlistitem name='Slider' value='slider'></dropdownlistitem>
-          <dropdownlistitem name='Button' value='button'></dropdownlistitem>
-          <dropdownlistitem name='Radio Buttons' value='radiobuttons'></dropdownlistitem>
-          <dropdownlistitem name='Checkboxes' value='checkboxes'></dropdownlistitem>
-          <dropdownlistitem name='Hyperlink' value='hyperlink'></dropdownlistitem>
-          <dropdownlistitem name='Image' value='image'></dropdownlistitem>
+          <dropdownitem name='' value='' />
+          <dropdownitem name='ListBox' value='listbox' />
+          <dropdownitem name='DropDownList' value='dropdownlist' />
+          <dropdownitem name='Slider' value='slider' />
+          <dropdownitem name='Button' value='button' />
+          <dropdownitem name='Radio Buttons' value='radiobuttons' />
+          <dropdownitem name='Checkboxes' value='checkboxes' />
+          <dropdownitem name='Hyperlink' value='hyperlink' />
+          <dropdownitem name='Image' value='image' />
         </items>
       </dropdownlist>
     </stackpanel>
@@ -145,11 +145,11 @@ This is the actual xml that is rendering the page.
       <TextBlock text="Binding Demos:" margin="0,5,0,0" fontfamily="arial"></TextBlock>
       <dropdownlist name="ddlBinding">
         <items>
-          <dropdownlistitem name='' value=''></dropdownlistitem>
-          <dropdownlistitem name='Resource Binding' value='resourcebinding'></dropdownlistitem>
-          <dropdownlistitem name='Element Binding' value='elementbinding'></dropdownlistitem>
-          <dropdownlistitem name='Data Binding' value='databinding'></dropdownlistitem>
-          <dropdownlistitem name='Collections Demo' value='collections'></dropdownlistitem>
+          <dropdownitem name='' value='' />
+          <dropdownitem name='Resource Binding' value='resourcebinding' />
+          <dropdownitem name='Element Binding' value='elementbinding' />
+          <dropdownitem name='Data Binding' value='databinding' />
+          <dropdownitem name='Collections Demo' value='collections' />
         </items>
       </dropdownlist>
     </stackpanel>
@@ -157,11 +157,11 @@ This is the actual xml that is rendering the page.
       <TextBlock text="Media Extensions:" margin="0,5,0,0" fontfamily="arial"></TextBlock>
       <dropdownlist name="ddlMediaExtensions">
         <items>
-          <dropdownlistitem name='' value=''></dropdownlistitem>
-          <dropdownlistitem name='YouTube' value='youtube'></dropdownlistitem>
-          <dropdownlistitem name='Hulu' value='hulu'></dropdownlistitem>
-          <dropdownlistitem name='Vimeo' value='vimeo'></dropdownlistitem>
-          <dropdownlistitem name='FunnyOrDie' value='funnyordie'></dropdownlistitem>
+          <dropdownitem name='' value='' />
+          <dropdownitem name='YouTube' value='youtube' />
+          <dropdownitem name='Hulu' value='hulu' />
+          <dropdownitem name='Vimeo' value='vimeo' />
+          <dropdownitem name='FunnyOrDie' value='funnyordie' />
         </items>
       </dropdownlist>
     </stackpanel>
