--- a/tests/tests.html
+++ b/tests/tests.html
@@ -80,7 +80,7 @@
 		  <textblock name='lblRight' halign='right'>right right right</textblock>
 		  <textblock name='lblLong'>long long long long long long long long long</textblock>
 		  <border name='bCircle' halign='center' borderthickness='5' bordercolor='Purple' width='150' height='150' background='Yellow' cornerradius='150'></border>
-		  <stackpanel name='spVerticalAlignment' height='300' halign='stretch' background='Gray' orientation='horizontal'>
+		  <stackpanel name='spVerticalAlignment' height='300' halign='stretch' background='LightGray' orientation='horizontal'>
 		    <textblock name='lblTop' valign='top'>top top top</textblock>
 		    <textblock name='lblVCenter' valign='center'>center center center</textblock>
 		    <textblock name='lblBottom' valign='bottom'>bottom bottom bottom</textblock>
