more progress on reflection-based template generation

--- a/demos/Sandbox/Sandbox.html
+++ b/demos/Sandbox/Sandbox.html
@@ -7,7 +7,7 @@
 	<div id="BuckshotHost">
 		<div style="width:250px;text-align:center;padding:5px;border:solid 1px black;background:whitesmoke;font-family:arial">
 		<h3>Buckshot Framework (alpha)</h3>
-		<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="LUCA UI Framework Logo"></img>
+		<img width="100" height="80" src="http://www.lucastudios.com/img/lucaui_logo_candidate2.png" alt="Buckshot Framework Logo"></img>
 		<p>Loading...</p>
 		</div>
 	</div>
@@ -16,8 +16,6 @@
 		<stackpanel name='spRoot' orientation="horizontal" halign="center">
 		  <resourcecollection>
 		    <color key="buckshotBlue" value="#165284"></color>
-		
-		    <var key="sidewidth" value="270"></var>
 		
 		    <styletemplate key="sideboxdark">
 		      <setters>
