removed .makeMe() function from library. no longer needed since reflection now handles.

--- a/demos/Sandbox/Sandbox.html
+++ b/demos/Sandbox/Sandbox.html
@@ -983,7 +983,7 @@ each list.
           <dropdownitem name='' value='' />
           <dropdownitem name='ListBox' value='listbox' />
           <dropdownitem name='DropDownList' value='dropdownlist' />
-          <dropdownitem name='slider' value='slider' />
+          <dropdownitem name='Slider' value='slider' />
           <dropdownitem name='Button' value='button' />
           <dropdownitem name='Radio Buttons' value='radiobutton' />
           <dropdownitem name='Checkboxes' value='checkbox' />
