--- a/demos/Sandbox/Sandbox.html
+++ b/demos/Sandbox/Sandbox.html
@@ -131,7 +131,9 @@ Begin Buckshot Templates
       <dropdownlist name="ddlControls">
         <items>
           <dropdownitem name='' value='' />
-          <dropdownitem name='ListBox' value='listbox' />
+          <dropdownitem name='TreeView' value='treeview' />
+          <dropdownitem name='DockPanel' value='dockpanel' />
+          <dropdownitem name='ListBox' value='listbox' />          
           <dropdownitem name='DropDownList' value='dropdownlist' />
           <dropdownitem name='Slider' value='slider' />
           <dropdownitem name='Button' value='button' />
@@ -178,6 +180,80 @@ Begin Buckshot Templates
     </border>
   </stack>
 </stack>
+</script>
+
+<script id='treeview' type='text/xml'>
+<treeview name='tvDemo' borderthickness='1' bordercolor='Black' >
+	<treenode header='Tree Node L1A' >
+		<treenode header='Tree Node L2A (custom icon)' >
+			<fileicon>
+				<border width='20' height='20' cornerradius='20' background='Orange' />
+			</fileicon>
+		</treenode>
+		<treenode header='Tree Node L2B'>
+			<treenode header='Tree Node L3A' />
+			<treenode header='Tree Node L3B' />
+			<treenode header='Tree Node L3C' />
+		</treenode>
+		<treenode header='Tree Node L2C' />
+	</treenode>
+	<treenode header='Tree Node L1B' />
+</treeview>
+</script>
+
+<script id='dockpanel' type='text/xml'>
+<dockpanel fillLast='false' width='500' height='500' background='Orange'>
+	<resourcecollection>
+		<styletemplate key='borderStyle'>
+			<setters>
+				<setter property='borderThickness' value='1' />
+				<setter property='borderColor' value='Black' />
+				<setter property='background' value='WhiteSmoke' />
+			</setters>
+		</styletemplate>
+		<styletemplate key='textStyle'>
+			<setters>
+				<setter property='vAlign' value='center' />
+				<setter property='hAlign' value='center' />
+				<setter property='background' value='WhiteSmoke' />
+			</setters>
+		</styletemplate>
+	</resourcecollection>
+		<border dockpanel.dock='left' style='{resource borderStyle}'>
+			<textblock text='#1' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='top' style='{resource borderStyle}'>
+			<textblock text='#2' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='right' style='{resource borderStyle}'>
+			<textblock text='#3' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='bottom' style='{resource borderStyle}'>
+			<textblock text='#4' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='left' style='{resource borderStyle}'>
+			<textblock text='#5' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='top' style='{resource borderStyle}'>
+			<textblock text='#6' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='right' style='{resource borderStyle}'>
+			<textblock text='#7' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='bottom' style='{resource borderStyle}'>
+			<textblock text='#8' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='left' style='{resource borderStyle}'>
+			<textblock text='#9' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='top' style='{resource borderStyle}'>
+			<textblock text='#10' style='{resource textStyle}' />
+		</border>
+		<border dockpanel.dock='right' style='{resource borderStyle}'>
+			<textblock text='#11' style='{resource textStyle}' />
+		</border>
+		
+</dockpanel>
 </script>
 
 <script id='image' type='text/xml'>
