--- a/demos/Calculator/Calculator.html
+++ b/demos/Calculator/Calculator.html
@@ -48,7 +48,7 @@
           - - textblock
             - - {style: '{resource defaultText}', text: 'Mode:', margin: '0,5,0,0'}
             - dropdownlist
-            - - name: ddlMode
+            - - selectionChanged: 'selectionChanged_handler'
               - - items
                 - - - dropdownitem
                     - - {name: Standard, value: Standard}
@@ -92,7 +92,7 @@
 				</stackpanel>
 				<stackpanel orientation='horizontal' valign='center' halign='right' margin='0,5,0,0'>
 					<textblock style='{resource defaultText}' text='Mode:' margin='0,0,0,5' />
-					<dropdownlist name='ddlMode'>
+					<dropdownlist selectionChanged='selectionChanged_handler'>
 						<items>
 							<dropdownitem name='Standard' value='Standard' />
 							<dropdownitem name='Extended' value='Extended' />
@@ -121,7 +121,7 @@
 	This template represents the default keypad layout of the calculator.
 	-->
 	<script id='keypad_default' type='text/xml'>
-		<grid name='gridStandard' halign='stretch' valign='stretch'>
+		<grid halign='stretch' valign='stretch'>
 			<rowdefinitions>
 				<rowdefinition height='*1' />
 				<rowdefinition height='*1' />
@@ -137,39 +137,39 @@
 				<columndefinition width='*1' />
 				<columndefinition width='*1' />
 			</columndefinitions>
-			<button style='{resource buttonDefaultStyle}' content='MC'></button>
-			<button grid.column='1' style='{resource buttonDefaultStyle}' content='MR'></button>
-			<button grid.column='2' style='{resource buttonDefaultStyle}' content='MS'></button>
-			<button grid.column='3' style='{resource buttonDefaultStyle}' content='M+'></button>
-			<button grid.column='4' style='{resource buttonDefaultStyle}' content='M-'></button>
+			<button click='buttonClick_handler' style='{resource buttonDefaultStyle}' content='MC'></button>
+			<button click='buttonClick_handler' grid.column='1' style='{resource buttonDefaultStyle}' content='MR'></button>
+			<button click='buttonClick_handler' grid.column='2' style='{resource buttonDefaultStyle}' content='MS'></button>
+			<button click='buttonClick_handler' grid.column='3' style='{resource buttonDefaultStyle}' content='M+'></button>
+			<button click='buttonClick_handler' grid.column='4' style='{resource buttonDefaultStyle}' content='M-'></button>
 			
-			<button grid.row='1' style='{resource buttonDefaultStyle}' content='<--'></button>
-			<button grid.column='1' grid.row='1' style='{resource buttonDefaultStyle}' content='CE'></button>
-			<button grid.column='2' grid.row='1' style='{resource buttonDefaultStyle}' content='C'></button>
-			<button grid.column='3' grid.row='1' style='{resource buttonDefaultStyle}' content='+-'></button>
-			<button grid.column='4' grid.row='1' style='{resource buttonDefaultStyle}' content='SQRT'></button>
+			<button click='buttonClick_handler' grid.row='1' style='{resource buttonDefaultStyle}' content='<--'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='1' style='{resource buttonDefaultStyle}' content='CE'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='1' style='{resource buttonDefaultStyle}' content='C'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='1' style='{resource buttonDefaultStyle}' content='+-'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='1' style='{resource buttonDefaultStyle}' content='SQRT'></button>
 			
-			<button grid.row='2' style='{resource buttonDefaultStyle}' content='7'></button>
-			<button grid.column='1' grid.row='2' style='{resource buttonDefaultStyle}' content='8'></button>
-			<button grid.column='2' grid.row='2' style='{resource buttonDefaultStyle}' content='9'></button>
-			<button grid.column='3' grid.row='2' style='{resource buttonDefaultStyle}' content='/'></button>
-			<button grid.column='4' grid.row='2' style='{resource buttonDefaultStyle}' content='%'></button>
+			<button click='buttonClick_handler' grid.row='2' style='{resource buttonDefaultStyle}' content='7'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='2' style='{resource buttonDefaultStyle}' content='8'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='2' style='{resource buttonDefaultStyle}' content='9'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='2' style='{resource buttonDefaultStyle}' content='/'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='2' style='{resource buttonDefaultStyle}' content='%'></button>
 			
-			<button grid.row='3' style='{resource buttonDefaultStyle}' content='4'></button>
-			<button grid.column='1' grid.row='3' style='{resource buttonDefaultStyle}' content='5'></button>
-			<button grid.column='2' grid.row='3' style='{resource buttonDefaultStyle}' content='6'></button>
-			<button grid.column='3' grid.row='3' style='{resource buttonDefaultStyle}' content='*'></button>
-			<button grid.column='4' grid.row='3' style='{resource buttonDefaultStyle}' content='1/x'></button>
+			<button click='buttonClick_handler' grid.row='3' style='{resource buttonDefaultStyle}' content='4'></button>
+			<button click='buttonClick_handler'  grid.column='1' grid.row='3' style='{resource buttonDefaultStyle}' content='5'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='3' style='{resource buttonDefaultStyle}' content='6'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='3' style='{resource buttonDefaultStyle}' content='*'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='3' style='{resource buttonDefaultStyle}' content='1/x'></button>
 			
-			<button grid.row='4' style='{resource buttonDefaultStyle}' content='1'></button>
-			<button grid.column='1' grid.row='4' style='{resource buttonDefaultStyle}' content='2'></button>
-			<button grid.column='2' grid.row='4' style='{resource buttonDefaultStyle}' content='3'></button>
-			<button grid.column='3' grid.row='4' style='{resource buttonDefaultStyle}' content='-'></button>
-			<button grid.column='4' grid.row='4' grid.rowspan='2' style='{resource buttonDefaultStyle}' content='='></button>
+			<button click='buttonClick_handler' grid.row='4' style='{resource buttonDefaultStyle}' content='1'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='4' style='{resource buttonDefaultStyle}' content='2'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='4' style='{resource buttonDefaultStyle}' content='3'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='4' style='{resource buttonDefaultStyle}' content='-'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='4' grid.rowspan='2' style='{resource buttonDefaultStyle}' content='='></button>
 			
-			<button grid.row='5' grid.columnspan='2' style='{resource buttonDefaultStyle}' content='0'></button>
-			<button grid.column='2' grid.row='5' style='{resource buttonDefaultStyle}' content='.'></button>
-			<button grid.column='3' grid.row='5' style='{resource buttonDefaultStyle}' content='+'></button>
+			<button click='buttonClick_handler' grid.row='5' grid.columnspan='2' style='{resource buttonDefaultStyle}' content='0'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='5' style='{resource buttonDefaultStyle}' content='.'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='5' style='{resource buttonDefaultStyle}' content='+'></button>
 		</grid>
 	</script>
 	
@@ -195,44 +195,44 @@
 				<columndefinition width='*1' />
 			</columndefinitions>
 			
-			<button grid.column='1' style='{resource buttonDefaultStyle}' content='MC'></button>
-			<button grid.column='2' style='{resource buttonDefaultStyle}' content='MR'></button>
-			<button grid.column='3' style='{resource buttonDefaultStyle}' content='MS'></button>
-			<button grid.column='4' style='{resource buttonDefaultStyle}' content='M+'></button>
-			<button grid.column='5' style='{resource buttonDefaultStyle}' content='M-'></button>
+			<button click='buttonClick_handler' grid.column='1' style='{resource buttonDefaultStyle}' content='MC'></button>
+			<button click='buttonClick_handler' grid.column='2' style='{resource buttonDefaultStyle}' content='MR'></button>
+			<button click='buttonClick_handler' grid.column='3' style='{resource buttonDefaultStyle}' content='MS'></button>
+			<button click='buttonClick_handler' grid.column='4' style='{resource buttonDefaultStyle}' content='M+'></button>
+			<button click='buttonClick_handler' grid.column='5' style='{resource buttonDefaultStyle}' content='M-'></button>
 			
-			<button grid.row='1' style='{resource buttonDefaultStyle}' content='sin'></button>
-			<button grid.column='1' grid.row='1' style='{resource buttonDefaultStyle}' content='<--'></button>
-			<button grid.column='2' grid.row='1' style='{resource buttonDefaultStyle}' content='CE'></button>
-			<button grid.column='3' grid.row='1' style='{resource buttonDefaultStyle}' content='C'></button>
-			<button grid.column='4' grid.row='1' style='{resource buttonDefaultStyle}' content='+-'></button>
-			<button grid.column='5' grid.row='1' style='{resource buttonDefaultStyle}' content='SQRT'></button>
+			<button click='buttonClick_handler' grid.row='1' style='{resource buttonDefaultStyle}' content='sin'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='1' style='{resource buttonDefaultStyle}' content='<--'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='1' style='{resource buttonDefaultStyle}' content='CE'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='1' style='{resource buttonDefaultStyle}' content='C'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='1' style='{resource buttonDefaultStyle}' content='+-'></button>
+			<button click='buttonClick_handler' grid.column='5' grid.row='1' style='{resource buttonDefaultStyle}' content='SQRT'></button>
 			
-			<button grid.row='2' style='{resource buttonDefaultStyle}' content='cos'></button>
-			<button grid.column='1' grid.row='2' style='{resource buttonDefaultStyle}' content='7'></button>
-			<button grid.column='2' grid.row='2' style='{resource buttonDefaultStyle}' content='8'></button>
-			<button grid.column='3' grid.row='2' style='{resource buttonDefaultStyle}' content='9'></button>
-			<button grid.column='4' grid.row='2' style='{resource buttonDefaultStyle}' content='/'></button>
-			<button grid.column='5' grid.row='2' style='{resource buttonDefaultStyle}' content='%'></button>
+			<button click='buttonClick_handler' grid.row='2' style='{resource buttonDefaultStyle}' content='cos'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='2' style='{resource buttonDefaultStyle}' content='7'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='2' style='{resource buttonDefaultStyle}' content='8'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='2' style='{resource buttonDefaultStyle}' content='9'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='2' style='{resource buttonDefaultStyle}' content='/'></button>
+			<button click='buttonClick_handler' grid.column='5' grid.row='2' style='{resource buttonDefaultStyle}' content='%'></button>
 			
-			<button grid.row='3' style='{resource buttonDefaultStyle}' content='x^2'></button>
-			<button grid.column='1' grid.row='3' style='{resource buttonDefaultStyle}' content='4'></button>
-			<button grid.column='2' grid.row='3' style='{resource buttonDefaultStyle}' content='5'></button>
-			<button grid.column='3' grid.row='3' style='{resource buttonDefaultStyle}' content='6'></button>
-			<button grid.column='4' grid.row='3' style='{resource buttonDefaultStyle}' content='*'></button>
-			<button grid.column='5' grid.row='3' style='{resource buttonDefaultStyle}' content='1/x'></button>
+			<button click='buttonClick_handler' grid.row='3' style='{resource buttonDefaultStyle}' content='x^2'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='3' style='{resource buttonDefaultStyle}' content='4'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='3' style='{resource buttonDefaultStyle}' content='5'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='3' style='{resource buttonDefaultStyle}' content='6'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='3' style='{resource buttonDefaultStyle}' content='*'></button>
+			<button click='buttonClick_handler' grid.column='5' grid.row='3' style='{resource buttonDefaultStyle}' content='1/x'></button>
 			
-			<button grid.row='4' style='{resource buttonDefaultStyle}' content='x^3'></button>
-			<button grid.column='1' grid.row='4' style='{resource buttonDefaultStyle}' content='1'></button>
-			<button grid.column='2' grid.row='4' style='{resource buttonDefaultStyle}' content='2'></button>
-			<button grid.column='3' grid.row='4' style='{resource buttonDefaultStyle}' content='3'></button>
-			<button grid.column='4' grid.row='4' style='{resource buttonDefaultStyle}' content='-'></button>
-			<button grid.column='5' grid.row='4' grid.rowspan='2' style='{resource buttonDefaultStyle}' content='='></button>
+			<button click='buttonClick_handler' grid.row='4' style='{resource buttonDefaultStyle}' content='x^3'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='4' style='{resource buttonDefaultStyle}' content='1'></button>
+			<button click='buttonClick_handler' grid.column='2' grid.row='4' style='{resource buttonDefaultStyle}' content='2'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='4' style='{resource buttonDefaultStyle}' content='3'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='4' style='{resource buttonDefaultStyle}' content='-'></button>
+			<button click='buttonClick_handler' grid.column='5' grid.row='4' grid.rowspan='2' style='{resource buttonDefaultStyle}' content='='></button>
 			
-			<button grid.row='5' style='{resource buttonDefaultStyle}' content='pi'></button>
-			<button grid.column='1' grid.row='5' grid.columnspan='2' style='{resource buttonDefaultStyle}' content='0'></button>
-			<button grid.column='3' grid.row='5' style='{resource buttonDefaultStyle}' content='.'></button>
-			<button grid.column='4' grid.row='5' style='{resource buttonDefaultStyle}' content='+'></button>
+			<button click='buttonClick_handler' grid.row='5' style='{resource buttonDefaultStyle}' content='pi'></button>
+			<button click='buttonClick_handler' grid.column='1' grid.row='5' grid.columnspan='2' style='{resource buttonDefaultStyle}' content='0'></button>
+			<button click='buttonClick_handler' grid.column='3' grid.row='5' style='{resource buttonDefaultStyle}' content='.'></button>
+			<button click='buttonClick_handler' grid.column='4' grid.row='5' style='{resource buttonDefaultStyle}' content='+'></button>
 		</grid>
 	</script>
 		
